Fix issue with divider and block divider alignment
The block divider right alignment used the "divider_length" setting
instead of its own "block_divider_length" setting. This commit adds
a new dynamically added 'divider-position-block' CSS variable to
handle the alignment for block dividers. In addition, this commit
fixes an issue with CSS variable value handling logic for adding
the unit suffix. This commit also hides the slider tooltip for the
"divider_position" setting.

modified: css/base/layout.css
modified: css/base/variables.css
modified: features/sooper-settings/css-variables-theme-settings-css.inc
modified: js/dist/dxpr-theme-settings.admin.js
modified: js/minified/dxpr-theme-settings.admin.min.js
modified: scss/base/layout.scss
modified: scss/base/variables.scss

--- a/scss/base/layout.scss
+++ b/scss/base/layout.scss
@@ -118,8 +118,11 @@ body.full-width-content {
   border-top-color: var(--dxpr-setting-block-divider-color);
   border-top-width: var(--dxpr-setting-block-divider-thickness);
   width: var(--dxpr-setting-block-divider-length);
-  margin-top: var(--dxpr-setting-block-divider-spacing);
-  margin-bottom: var(--dxpr-setting-block-divider-spacing);
+  margin:
+    var(--dxpr-setting-block-divider-spacing)
+    auto
+    var(--dxpr-setting-block-divider-spacing)
+    var(--dxpr-setting-divider-position-block);
 }
 
 #block-system-help {
