--- a/scss/base/variables.scss
+++ b/scss/base/variables.scss
@@ -259,6 +259,7 @@ $schemes: (
   --dxpr-setting-divider-color: var(--dxpr-color-cardtext);
   --dxpr-setting-divider-length: 100%;
   --dxpr-setting-divider-position: auto;
+  --dxpr-setting-divider-position-block: auto;
   --dxpr-setting-divider-thickness: 4px;
   --dxpr-setting-dropdown-background: var(--dxpr-color-header);
   --dxpr-setting-dropdown-hover-background: inherit;
